added important info to the readme file
Signed-off-by: Georgi Georgiev <georgi.getz@outlook.com>